# Compass

./: .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  algorithm.py  install.sh  notes.md  pyproject.toml  setup.py  suffixes.py  test.sh
_tmp/turbo_compass_cache/: cell_names.txt  reaction_ids.txt  turbo_compass_cache.txt
analysis/: Demo-micropools.ipynb  Demo.ipynb  compass_analysis.py
analysis/extdata/RECON2/: metabolite_metadata.csv  reaction_metadata.csv
analysis/extdata/Th17-micropooled/: micropooled_data.tsv  micropools.tsv
compass/: __init__.py  _version.py  global_state.py  globals.py  main.py  turbo_compass.py  utils.py
compass/Resources/Queue Templates/: CompassSingleSample.sh  CompassSlurmArray.sh  CompassSlurmPenalties.sh
compass/compass/: algorithm.py  algorithm_t.py  cache.py  microclustering.py  penalties.py  torque.py
compass/models/: MetabolicModel.py  __init__.py  __main__.py  fixRecon3.py  geneSymbols.py  geneSymbolsMATLAB.py  importCommon.py  importMATLAB.py  importSBML2.py  importSBML3.py  partitionModel.py  partitionModel_Human1.py  partitionModel_Mouse1.py  partitionModel_RECON2.py
compass/tests/: Network1.py  Network2.py  Network3.py
compass/turbo_mc/: __init__.py  matrix_manipulation.py  metrics.py  plotting.py  utils.py  wilcoxon.py
crates/: Cargo.toml
crates/compass/: Cargo.toml
crates/cplex/: Cargo.toml  build.rs  cplex_wrapper.h
crates/cplex-bindings/: Cargo.toml  build.rs  cplex_wrapper.h
crates/cplex-bindings/src/: lib.rs  params.rs
crates/cplex-rs/: Cargo.toml  build.rs
crates/cplex-rs/src/: arrays.rs  env.rs  error.rs  lib.rs  main.rs  main_old.rs  problem.rs  types.rs
crates/cplex-rs/src/tests/: lp1.rs  mod.rs
crates/cplex/src/: lib.rs
crates/gsmm/: Cargo.toml
crates/gsmm/src/: lib.rs  main.rs  mat.rs  model.rs
docs/: .buildinfo  AWS-tutorial.html  Compass-Advanced-Usage-Tutorial.html  Compass-Postprocessing-Tutorial.html  Compass-Settings.html  Demo.html  Demo.ipynb  api.md  conf.py  contributing.md  extra.html  genindex.html  index.html  index.md  index.rst  install.html  install.rst  installation.md  installation.rst  micropooling.html  module_compass.rst  objects.inv  quickstart.rst  search.html  searchindex.js  settings.md  settings.rst  turbo_compass.rst  turbo_compass.tex  tutorial.html  user-guide.html  user_guide.md
docs/.doctrees/: AWS-tutorial.doctree  Compass-Postprocessing-Tutorial.doctree  Compass-Settings.doctree  environment.pickle  index.doctree  install.doctree  micropooling.doctree  tutorial.doctree  user-guide.doctree
docs/_sources/: AWS-tutorial.rst.txt  Compass-Advanced-Usage-Tutorial.rst.txt  Compass-Postprocessing-Tutorial.rst.txt  Compass-Settings.rst.txt  Demo.ipynb.txt  Installing-CPLEX-Tutorial.rst.txt  Tutorial.rst.txt  extra.rst.txt  index.rst.txt  install.rst.txt  micropooling.rst.txt  user-guide.rst.txt
docs/doctrees/: AWS-tutorial.doctree  Compass-Postprocessing-Tutorial.doctree  Compass-Settings.doctree  environment.pickle  index.doctree  install.doctree  micropooling.doctree  tutorial.doctree  user-guide.doctree
docs/notebooks/: Demo-micropools.html  Demo-micropools.ipynb  Demo.html  Demo.ipynb  compass_analysis.py  example.ipynb  postprocessing.ipynb  postprocessing.nblink  pseudobulk.ipynb
docs/source/: extra.rst  index.rst
docs/sources/: Compass-Advanced-Usage-Tutorial.rst.txt
docs_source/: Makefile
docs_source/source/: Compass-Postprocessing-Tutorial.rst  Compass-Settings.rst  README.old_rst  conf.py  index.rst  install.rst  micropooling.rst  tutorial.rst  user-guide.rst
mflux/: __init__.py  _version.py  expression.py  globals.py  models.py  optimization.py
mflux/compass/: __init__.py  algorithm.py  cache.py  main.py  penalties.py  torque.py
mflux/models/: MetabolicModel.py  __init__.py  geneSymbols.py  importMATLAB.py  importSBML3.py  models.py
mflux/optimization/: __init__.py  compass.py  imat.py  utils.py
mflux/tests/: Network1.py  Network2.py  Network3.py
notebooks/: Demo-micropools.ipynb  Demo.ipynb  compass_analysis.py  micropooled_results.csv
tests/: test_compass.py  test_global_state.py  test_models.py  test_turbo_compass.py
tests/data/: select_reactions.txt  selected_reactions_for_each_cell.txt
(+253 files in other folders)
