[workspace]
members = ["cplex-bindings", "compass", "cplex-rs", "gsmm"]

resolver = "2"

[workspace.dependencies]
bindgen = { version = "0.70" }
regex = { version = "1.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rust_sbml = { version = "0.7", default-features = false }
itertools = { version = "0.13" }

# Intra-workspace dependencies
cplex-bindings = { path = "cplex-bindings" }
